--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.14",
-    "sweetalert2": "8.18.3",
     "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
@@ -26,6 +25,8 @@
     "lodash": "^4.17.15",
     "ngx-webstorage-service": "^4.1.0",
     "rxjs": "~6.4.0",
+    "shuffle-array": "^1.0.1",
+    "sweetalert2": "8.18.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
