--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular-cli-ghpages": "^0.6.2",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
     "ngx-webstorage-service": "^4.1.0",
@@ -28,6 +29,7 @@
     "shuffle-array": "^1.0.1",
     "sweetalert2": "8.18.3",
     "tslib": "^1.10.0",
+    "url": "^0.11.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
